--- a/app/src/main/res/layout/file_picker_item.xml
+++ b/app/src/main/res/layout/file_picker_item.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="?android:attr/textColorPrimary"
+            android:textColor="@android:color/black"
             android:ellipsize="end"
             android:maxLines="1" />
 
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:textColor="?android:attr/textColorSecondary"
+            android:textColor="@android:color/black"
             android:ellipsize="end"
             android:maxLines="1"
             android:layout_marginTop="2dp" />
