--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -20,6 +20,8 @@
     </string-array>
     <string-array name="graphics_driver_entries">
         <item>Wrapper</item>
+        <item>Wrapper v3</item>
+        <item>Wrapper Xmod (Teste)</item>
     </string-array>
     <string-array name="wrapper_graphics_driver_version_entries">
         <item>System</item>
@@ -36,6 +38,7 @@
         <item>Gamepad</item>
     </string-array>
     <string-array name="dxwrapper_entries">
+        <item>Unified (DXVK + VKD3D)</item>
         <item>WineD3D</item>
         <item>DXVK</item>
         <item>VKD3D</item>
